--- a/hello-view.fxml
+++ b/hello-view.fxml
@@ -5,13 +5,23 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/16" fx:controller="com.example.dnd1.HelloController">
+<VBox alignment="CENTER" prefHeight="472.0" prefWidth="504.0" spacing="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dnd2.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-
-    <Label fx:id="welcomeText" text="GAME OVER!" />
-   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Time played:" />
-   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Enemies killed:" />
-    <Button onAction="#onHelloButtonClick" text="Quit" />
+   <Label fx:id="gamelabel" prefHeight="190.0" prefWidth="454.0" text="GAME NAME" textAlignment="CENTER">
+      <font>
+         <Font size="75.0" />
+      </font></Label>
+   <TextArea fx:id="textarea" editable="false" prefHeight="200.0" prefWidth="200.0" text="New Game?" visible="false" />
+   <TextField fx:id="pole" onAction="#onenter" prefHeight="33.0" prefWidth="464.0" promptText="yes / no" visible="false" />
+   <FlowPane alignment="CENTER" blendMode="SRC_ATOP" hgap="100.0" prefHeight="22.0" prefWidth="464.0">
+      <children>
+         <Button fx:id="newgamebutt" alignment="CENTER" contentDisplay="BOTTOM" mnemonicParsing="false" onAction="#onnewgame" prefHeight="25.0" prefWidth="86.0" text="New game" textAlignment="CENTER" />
+         <Button fx:id="quitbutt" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onquit" prefHeight="25.0" prefWidth="88.0" text="Quit" textAlignment="CENTER">
+            <FlowPane.margin>
+               <Insets />
+            </FlowPane.margin></Button>
+      </children>
+   </FlowPane>
 </VBox>
