--- a/hello-view.fxml
+++ b/hello-view.fxml
@@ -9,7 +9,7 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <Label fx:id="gamelabel" prefHeight="190.0" prefWidth="454.0" text="GAME NAME" textAlignment="CENTER">
+   <Label fx:id="gamelabel" prefHeight="190.0" prefWidth="454.0" text="Dream knight" textAlignment="CENTER">
       <font>
          <Font size="75.0" />
       </font></Label>
@@ -19,6 +19,7 @@
       <children>
          <Button fx:id="newgamebutt" alignment="CENTER" contentDisplay="BOTTOM" mnemonicParsing="false" onAction="#onnewgame" prefHeight="25.0" prefWidth="86.0" text="New game" textAlignment="CENTER" />
          <Button fx:id="rollbutt" mnemonicParsing="false" onAction="#onroll" text="Roll!" visible="false" />
+         <Button fx:id="tryagainbutt" mnemonicParsing="false" onAction="#ontryagain" text="Try again" visible="false" />
          <Button fx:id="quitbutt" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onquit" prefHeight="25.0" prefWidth="88.0" text="Quit" textAlignment="CENTER">
             <FlowPane.margin>
                <Insets />
