--- a/hello-view.fxml
+++ b/hello-view.fxml
@@ -9,18 +9,18 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <Label fx:id="gamelabel" prefHeight="190.0" prefWidth="454.0" text="Dream knight" textAlignment="CENTER">
+   <Label fx:id="gameLabel" prefHeight="190.0" prefWidth="454.0" text="Dream knight" textAlignment="CENTER">
       <font>
          <Font size="75.0" />
       </font></Label>
-   <TextArea fx:id="textarea" editable="false" prefHeight="200.0" prefWidth="200.0" text="New Game?" visible="false" />
-   <TextField fx:id="pole" onAction="#onenter" prefHeight="33.0" prefWidth="464.0" promptText="type [a] or [b]" visible="false" />
+   <TextArea fx:id="textArea" editable="false" prefHeight="210.0" prefWidth="464.0" text="New Game?" visible="false" />
+   <TextField fx:id="textField" onAction="#onEnter" prefHeight="33.0" prefWidth="464.0" promptText="type [a] or [b]" visible="false" />
    <FlowPane alignment="CENTER" blendMode="SRC_ATOP" hgap="100.0" prefHeight="22.0" prefWidth="464.0">
       <children>
-         <Button fx:id="newgamebutt" alignment="CENTER" contentDisplay="BOTTOM" mnemonicParsing="false" onAction="#onnewgame" prefHeight="25.0" prefWidth="86.0" text="New game" textAlignment="CENTER" />
-         <Button fx:id="rollbutt" mnemonicParsing="false" onAction="#onroll" text="Roll!" visible="false" />
-         <Button fx:id="tryagainbutt" mnemonicParsing="false" onAction="#ontryagain" text="Try again" visible="false" />
-         <Button fx:id="quitbutt" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onquit" prefHeight="25.0" prefWidth="88.0" text="Quit" textAlignment="CENTER">
+         <Button fx:id="newGameButton" alignment="CENTER" contentDisplay="BOTTOM" mnemonicParsing="false" onAction="#onNewGame" prefHeight="25.0" prefWidth="86.0" text="New game" textAlignment="CENTER" />
+         <Button fx:id="rollButton" mnemonicParsing="false" onAction="#onRoll" text="Roll!" visible="false" />
+         <Button fx:id="tryAgainButton" mnemonicParsing="false" onAction="#onTryAgain" text="Try again" visible="false" />
+         <Button fx:id="quitButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onQuit" prefHeight="25.0" prefWidth="88.0" text="Quit" textAlignment="CENTER">
             <FlowPane.margin>
                <Insets />
             </FlowPane.margin></Button>
